--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "backbone": "^1.0.0",
     "jquery": "^2.1.3",
-    "lodash.merge": "^3.0.3",
-    "underscore": "^1.8.2"
+    "lodash": "^3.10.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
