--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backbone-deep-model",
+  "name": "backbone-deep-model-lodash",
   "version": "2.0.1",
   "description": "Improved support for models with nested attributes.",
   "author": {
